# opencv_test

./: .gitignore  CMakeLists.txt  README.md  opencv_test.cpp
